Revision history for Spreadsheet-HTML

0.42
    - added benchmark tool
    - refactor td/tr decision (slight speed increase)
    - removed Clone and Math::Matrix dependencies

0.41
    - added today param to calendar()
    - can override beadwork() colors with -N params
    - corrected checkerboard() alternating colors
    - added beadwork() presets: apple, cartman and homer
    - require HTML::AutoTag v0.09 (keeping up-to-date)
    - added Spreadsheet::Engine support via new param 'apply'
    - calendar() cells aligned to right
    - banner() alerts user to errors

0.40
    - corrected mktable params
    - sudoku() alerts user when no solutions found
    - sudoku() alerts user to install dependency

0.39
    - added sorted_attrs literal param

0.38
    - require HTML::AutoTag v0.07 (unsorted attributes)
    - added mario preset for beadwork()
    - no wantarray check for animate()

0.37
    - removed dk and shroom methods (now args to beadwork)
    - added beadwork (no useful API - simple refactor for now)
    - added mktable CLI tool
    - able to pass some custom args along to Handsontable JS
    - presets check for wantarray (client can get table w/out js)
    - added github hints to Makefile

0.36
    - fixed animate bug introduced at commit cba507b (v0.34)
    - added handson() preset
    - restructure of preset modules that use JS
    - added _auto internal param

0.35
    - added sudoku() preset
    - no thead or tfoot for matrix (only tbody)
    - can now emit multiple colgroup tags
    - added preserve attr for preserving attrs from loaded files
    - require HTML::AutoTag v0.06
    - chess and checkers have moving pieces
    - animate() no longer forces fx = 1

0.34
    - !API change: 
        -rowX is now -rX
        -colX is now -cX
        -rowXcolX is now -rXcX
    - refactored _process() (slight speed increase)
    - can style calendar by day
    - animate background and/or foreground
    - added wrap literal param